infrastructure/ingress/blocky/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blocky # placeholder
  labels:
    athanor.io/openbao-access: "enabled" # ClusterSecretStore key
    # Infrastructure Tiers: they're excelent for "Group By" logic in monitoring dashboards (grafana)
    tier: infrastructure
    component: dns
    app.kubernetes.io/name: blocky
    app.kubernetes.io/managed-by: flux

    # Security/Governance Labels (PSA)
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest

  annotations:
    # Documentation & Ownership
    home.lab/owner: "aner"
    home.lab/description: "Primary DNS resolution for the athanor"
