infrastructure/ingress/blocky/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky
spec:
  type: ClusterIP

  selector:
    app: blocky
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dns-tcp
    - name: http
      port: 4000
      targetPort: http
